test/classes/diten/newArray.good
newArray.chpl:4: error: invalid use of 'new'
